@@ -1,5 +1,7 @@
 2008-04-04  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rb_cairo_path.c: remove garbages.
+
 	* extconf.rb: fix object file extension substitution.
 
 	* pkg-config.rb: detect MSVC environment.
